syntax = "proto3";

package echo_unary;

service Echo {
  rpc Echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string data = 1;
}

message EchoResponse {
  string data = 1;
}